--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "NODE_ENV=production node ./src/index.js",
+    "dev": "NODE_ENV=development node ./src/index.js"
   }
 }
