--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "morgan": "*"
   },
   "devDependencies": {},
   "scripts": {
